--- a/src/css/grabBagItem.css
+++ b/src/css/grabBagItem.css
@@ -1,3 +1,29 @@
 button.close {
     font-size: 2.2em;
 }
+
+.modal-title {
+    width: 100%;
+}
+
+.dozuki_grabbag_items_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.dozuki_grabbag_device_list_item_container {
+    flex-grow: 0;
+    width: 130px;
+}
+
+.dozuki_grabbag_remove_button {
+/*    box-shadow: inset 0 0 4px #5e3a82; */
+}
+
+.dozuki_grabbag_device_list_section_item_bubble {
+    background: #fff;
+    border-radius: 15px;
+    margin: 0 15px;
+    box-shadow: 2px 2px 3px gray;
+}
