--- a/src/css/grabBagItem.css
+++ b/src/css/grabBagItem.css
@@ -6,24 +6,14 @@ button.close {
     width: 100%;
 }
 
-.dozuki_grabbag_items_container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+.dozuki_grabbag_device_guide_link {
+    margin: 20px;
+    display: block;
+    border: solid 1px silver;
+    text-align: center;
+    background: #f6f6f6;
 }
 
-.dozuki_grabbag_device_list_item_container {
-    flex-grow: 0;
-    width: 130px;
-}
-
-.dozuki_grabbag_remove_button {
-/*    box-shadow: inset 0 0 4px #5e3a82; */
-}
-
-.dozuki_grabbag_device_list_section_item_bubble {
-    background: #fff;
-    border-radius: 15px;
-    margin: 0 15px;
-    box-shadow: 2px 2px 3px gray;
+.dozuki_grabbag_device_list_section_item_details {
+    font-size: 1.2em;
 }
